# Quasar

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  HANDOFF.md  LegacyLens_PreSearch_ProjectPlan_USGS_NSHMP_Fortran.md  LegacyLens_Updated_ProjectPlan.md  Makefile  README.md  Week1_Checklist.md  docker-compose.yml  pyproject.toml  tasks.md  validation_results.md  week1_discovery.md
.claude/: settings.local.json
.github/workflows/: ci.yml
docker/: Dockerfile.api  Dockerfile.ui
eval/: gold.json  metrics.py
scripts/: ingest_corpus.py
src/legacylens/: __init__.py  cli.py
src/legacylens/api/: __init__.py  main.py
src/legacylens/api/routes/: files.py  graph.py  health.py  query.py  symbols.py
src/legacylens/chunking/: __init__.py  chunker.py  fallback.py  fortran_parser.py
src/legacylens/core/: __init__.py  config.py  schemas.py  spans.py
src/legacylens/db/: __init__.py  models.py  repository.py  session.py
src/legacylens/embedding/: __init__.py  embedder.py
src/legacylens/generation/: __init__.py  answer_generator.py  llm_client.py  prompts.py
src/legacylens/retrieval/: __init__.py  searcher.py
tests/: test_chunking.py  test_core.py
ui/: app.py
ui/graph/: index.html  package-lock.json  package.json
ui/graph/src/: App.tsx
ui/graph/src/components/: CallEdgeObject.tsx  FileNodeObject.tsx  GraphCanvas.tsx  SourceCodePanel.tsx  SymbolNodeObject.tsx
ui/graph/src/styles/: graph.css
ui/graph/src/utils/: edge-utils.ts  graph-store.ts  symbol-layout.ts
week3/: graph_api_implementation.py  week3_frontend_plan.md  week3_quick_ref.txt
