[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legacylens"
version = "0.1.0"
description = "RAG system for legacy Fortran scientific codebases"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Tanner Eischen" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pgvector>=0.2.0",
    "alembic>=1.13.0",

    # LLM & Embeddings
    "openai>=1.10.0",
    "tiktoken>=0.5.0",

    # HTTP client
    "httpx>=0.26.0",

    # UI
    "streamlit>=1.30.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-env>=1.1.0",

    # Type checking
    "mypy>=1.8.0",
    "types-psycopg2>=2.9.0",

    # Linting & Formatting
    "ruff>=0.1.0",
    "black>=24.1.0",
    "pre-commit>=3.6.0",

    # Development
    "ipython>=8.20.0",
]

[project.scripts]
legacylens = "legacylens.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/legacylens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict
    "ARG001", # unused function argument
]

[tool.ruff.isort]
known-first-party = ["legacylens"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | corpus
)/
'''
